Closure enhancements - created watney library dependencies file for closure library - compiled  soy template JS file - compiled all JS file to reduce requests to 1 request - adjusted backend + html accordingly

--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,6 @@ _testmain.go
 
 # project stuff
 conf/unionwork.ini
-static/resources/js/closure-library/
 static/resources/soy/SoyToJsSrcCompiler.jar
+static/resources/libs/closure-library
+static/resources/libs/compiler.jar
