Debug flag - introduced a debug flag into the conf file to choose between served JS files (either the plain files for dev mode or the compiled JS file for prod mode)

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ conf/unionwork.ini
 static/resources/soy/SoyToJsSrcCompiler.jar
 static/resources/libs/closure-library
 static/resources/libs/compiler.jar
+watney
