--- a/conf/watney-templ.ini
+++ b/conf/watney-templ.ini
@@ -2,6 +2,8 @@
 [web]
 ; The port which Watney uses to listen to requests (e.g., for web-pages, REST calls and so on)
 port = 8080                                         # [>1024]
+; Whether the app server is run in debugging mode for dev or in production mode
+debug = false                                       # [true|false]
 
 ; Section for all mail settings
 [mail]
