Send mail implementationauthentication  * started to implement a REST interface to send emails via SMTP  * included smtp email go lib (for easy sending of attachments as well)  * extended config file with SMTP address and port

--- a/conf/watney-templ.ini
+++ b/conf/watney-templ.ini
@@ -25,3 +25,7 @@ passwd = number_fourty_2                            # [some_passwd]
 skipCertificateVerification = false                 # [false|true]
 ; Verbose output whether to print debugging info or not to StdOut
 verbose = false                                     # [false|true]
+; The SMTP server address
+smtp = mail.unionwork.org
+; The SMTP server port
+smtpPort = 25
