--- a/conf/watney-templ.ini
+++ b/conf/watney-templ.ini
@@ -26,6 +26,6 @@ skipCertificateVerification = false                 # [false|true]
 ; Verbose output whether to print debugging info or not to StdOut
 verbose = false                                     # [false|true]
 ; The SMTP server address
-smtp = mail.unionwork.org
+smtpaddress = mail.unionwork.org
 ; The SMTP server port
 smtpPort = 25
