- Fixed a minor bug that prevented deleted mails to be shown in the Trash folder (they would still appear in their original folder) - Implemented multipart mail body analyses - implemented tests for multipart analyses

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ build/*
 conf/unionwork.ini
 conf/test.ini
 conf/local-dev.ini
+mail/test_files
 static/resources/js/soyutils_usegoog.js
 static/resources/js/soy-templates.js
 static/resources/js/watney-compiled.js
