Display HTML mails: - implemented visualization of text/html content, if provided by the Mail TODO: * HTML content might contain unsecure content (pictures, ...) => there needs to be a safety mechanism to remove unsafe content by default and only load/show it when the user specifically requests it

--- a/build.gradle
+++ b/build.gradle
@@ -150,7 +150,7 @@ task buildDepFile(type: Exec, group: "JS Compile") {
         executable "$closureBinFolder/build/depswriter.py"
     }
     // HINT: MAGIC! The gradle arg doesn't need the surrounding quotes for both paths
-    args "--root_with_prefix=$jsSrcDir ../../../../js/"
+    args "--root_with_prefix=$jsSrcDir ../../../../js"
     standardOutput = new FileOutputStream(new File("$jsSrcDir/watney-deps.js"))
 }
 
